# GavinAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  searxng-settings.yml
.claude/commands/: charts.md  data-analysis.md  edwm-wip-movement.md  stock-chart.md  weather.md  (+2 more)
.doc/: agent-comparison.md  agent-loop.md  architecture.md
.github/: copilot-instructions.md
.spec/: 000-spec-template.md  001-ai-assistant-agent-platform.md  002-chat-ui.md  003-agent-system.md  004-agent-ui.md  005-agent-behavioral-guidelines.md  006-mcp-management.md  007-chart-rendering.md  008-on-demand-skills.md  009-workflow-scheduling.md  010-embedding-skill-routing.md  011-scheduled-workflow-output.md  012-rag-knowledge-base.md  013-web-search-searxng.md  014-automated-testing.md  014-code-refactoring.md  015-code-refactoring.md  015-playwright-ui-tests.md  016-code-refactoring.md  017-parallel-tool-execution.md  018-reasoning-trace-display.md  019-mcp-server-for-copilot.md  020-claude-code-skill-authoring.md  021-agentskills-spec-compliance.md  021.1-skill-authoring-compliance.md  022-skill-routing-architecture.md  023-multi-source-skill-discovery.md  024-mcp-session-expiry-detection.md  025-skill-sync-anthropic-compliance.md  026-skill-scale-optimization.md  027-llm-call-resilience.md  027-refactor-agent-loop-nodes.md  028-refactor-agent-loop-nodes.md  029-mcp-file-based-config.md  030-streaming-reasoning-display.md  031-token-usage-in-trace.md  032-markdown-rendering-improvements.md
.testreport/: 027-llm-call-resilience.md  028-refactor-agent-loop-nodes.md  029-mcp-file-based-config.md  README.md
agent/: admin.py  apps.py  graph.py  models.py  runner.py  services.py  signals.py  tasks.py  tools.py  urls.py  views.py
chat/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
config/: celery.py  urls.py
core/: llm.py  memory.py  pagination.py
interfaces/: base.py  cli.py  heartbeat.py  telegram.py  telegram_urls.py  web.py
templates/: base.html
tests/: conftest.py  factories.py
(+178 files in other folders)
