[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.6.2",
    "click>=8.3.1",
    "cryptography>=46.0.5",
    "dj-database-url>=3.1.2",
    "django>=5.2.12",
    "django-celery-beat>=2.9.0",
    "django-htmx>=1.27.0",
    "httpx>=0.28.1",
    "langgraph>=1.1.2",
    "litellm>=1.82.4",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.27.2.2",
    "python-decouple>=3.8",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0.3",
    "redis>=6.4.0",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-playwright>=0.7.2",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --ds config.settings.test"
markers = [
    "db: requires PostgreSQL test database",
    "external: mocks external services (LLM, SearXNG, Jina)",
    "e2e: end-to-end browser tests (requires Playwright + live server)",
]
